[package]
name = "yew-markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.8"
yew = "0.20.0"

wasm-bindgen = "=0.2.84"
wasm-logger = "0.2.0"
log= "0.4.17"

syntect = { version = "5.0.0", default-features = false, features = ["default-fancy"]}
web-sys = "0.3.61"
katex = {version="0.4", default-features=false, features=["wasm-js"]}

[dev-dependencies]
wasm-test = {git="https://github.com/rambip/wasm-test"}

#[build-dependencies]
#wasmer = "4.0.0"

[workspaces]
members = [
    "examples/editor/",
    "examples/showcase/",
    "examples/onclick/",
    "examples/performance/",
]
