[package]
name = "yew-markdown"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20.0"

wasm-bindgen = "=0.2.87"
wasm-logger = "0.2.0"
log= "0.4.17"

rust-web-markdown = { git = "https://github.com/rambip/rust-web-markdown/" }
web-sys = {version="0.3.61", features=[]}

[workspace]
members = [
    "examples/editor/",
    "examples/showcase/",
    "examples/onclick/",
    "examples/performance/",
]
