[package]
name = "yew-markdown"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21"

wasm-bindgen = "0.2"
wasm-logger = "0.2"
log = "0.4"

rust-web-markdown = { git = "https://github.com/rambip/rust-web-markdown/" }
web-sys = { version = "0.3", features = [] }

[features]
debug = ["rust-web-markdown/debug"]

[workspace]
members = ["examples/*"]
